--- a/oas/products.yml
+++ b/oas/products.yml
@@ -66,13 +66,13 @@ paths:
       description: Returns a single product
       operationId: getProductByID
       parameters:
-      - name: id
-        in: path
-        description: ID of product to get
-        schema:
-          type: string
-        required: true
-        example: 10
+      # - name: id
+      #   in: path
+      #   description: ID of product to get
+      #   schema:
+      #     type: string
+      #   required: true
+      #   example: 10
       responses:
         "200":
           description: successful operation
@@ -101,15 +101,15 @@ components:
       type: object
       required:
         - id
-        - name
+        # - name
         - price
       properties:
         id:
           type: string
         type:
           type: string
-        name:
-          type: string
+        # name:
+        #   type: string
         version:
           type: string
         price:
